# ICP_algorithm

./: CMakeLists.txt  LICENSE  README.md  run_icp.cpp  show_icp.cpp
BALL BAR/: 4.ply  5.ply  TRANS.txt
QT_UI/icp/: CMakeLists.txt  icp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_UI/icp/data/: 3.ply  readme.md
data/: 2.ply
